--- a/WebApplication1/Pages/Index.cshtml
+++ b/WebApplication1/Pages/Index.cshtml
@@ -6,6 +6,6 @@
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about Its My AZ-204 <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET V1
-            Core</a>.</p>
+    <p>Learn about Its My AZ-204 <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET
+            Core - V2 </a>.</p>
 </div>
